--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,21 @@
 
     <head>
         <title>Sockets.io</title>
+
+        <meta charset="UTF-8" name="name" content="content">
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
 
         <h1>Hello sockets.io</h1>
+
+        <script src="/js/jquery-3.1.0.min.js" type="text/javascript"></script>
+        <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+            var socket = io();
+        </script>
 
     </body>
 
