--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,9 @@
 
         <h1>Hello sockets.io</h1>
 
-        <script src="/js/jquery-3.1.0.min.js" type="text/javascript"></script>
-        <script src="/js/socket.io-1.3.7.js" type="text/javascript"></script>
-
-        <script type="text/javascript">
-            var socket = io();
-        </script>
+        <script src="/js/jquery-3.1.0.min.js"></script>
+        <script src="/js/socket.io-1.3.7.js"></script>
+        <script src="/js/app.js"></script>
 
     </body>
 
