--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
 
         <h1>Hello sockets.io</h1>
 
+        <form id="message-form">
+            <input type="text" name="message" placeholder="Type your message here">
+            <input type="submit" name="button">
+        </form>
+
         <script src="/js/jquery-3.1.0.min.js"></script>
         <script src="/js/socket.io-1.3.7.js"></script>
         <script src="/js/app.js"></script>
