Add message to browser UI

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
         <meta charset="UTF-8" name="name" content="content">
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
-
     <body>
+
+        <div class="messages">
+            <!--This is where the Messages will be contained! -->
+
+
+        </div>
 
         <h1>Hello sockets.io</h1>
 
