--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
         </div>
 
-        <h1>Hello sockets.io</h1>
+        <h1>Chat anonymously</h1>
 
         <form id="message-form">
             <input type="text" name="message" placeholder="Type your message here">
