--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         <script src="/js/jquery-3.1.0.min.js"></script>
         <script src="/js/socket.io-1.3.7.js"></script>
         <script src="/js/moment.js"></script>
+        <script src="/js/queryParams.js"></script>
         <script src="/js/app.js"></script>
 
     </body>
