--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,35 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<html>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
+  </head>
+  <body>
 
-    <head>
-        <title>Sockets.io</title>
+    <div class="container">
+        <h1> Join Chat</h1>
 
-        <meta charset="UTF-8" name="name" content="content">
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body>
-
-        <div class="messages">
-            <!--This is where the Messages will be contained! -->
-
-
-        </div>
-
-        <h1>Chat anonymously</h1>
-
-        <form id="message-form">
-            <input type="text" name="message" placeholder="Type your message here">
-            <input type="submit" name="button">
+        <form action="/chat.html">
+          <div class="form-group">
+            <label>Display Name</label>
+            <input type="text" class="form-control" name="name" placeholder="Enter your Display name here">
+            <p> Tip: Leave the Display name Field empty to chat as "Anonymous"</p>
+            <br>
+            <input class="btn btn-outline-success" type="submit" value="Join Chat">
+          </div>
         </form>
 
-        <script src="/js/jquery-3.1.0.min.js"></script>
-        <script src="/js/socket.io-1.3.7.js"></script>
-        <script src="/js/moment.js"></script>
-        <script src="/js/queryParams.js"></script>
-        <script src="/js/app.js"></script>
 
-    </body>
+    </div>
 
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+  </body>
 </html>
