Add support for chatRooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -12,16 +12,21 @@
 
         <form action="/index.html">
             <div class="form-group">
-                  <input class="btn btn-outline-success" type="submit" value="Change Display Name">
+                  <input class="btn btn-outline-success" type="submit" value="Change settings">
             </div>
         </form>
+
+        <h2>You are chatting in room:</h2>
+        <h2 id="room-title">Your are in Chatroom: </h2>
+        <hr>
+        <br>
         <div class="messages">
             <!--This is where the Messages will be contained! -->
 
 
         </div>
 
-        <h1>Chat anonymously</h1>
+        <h2>Chat anonymously</h2>
 
         <form id="message-form">
             <input type="text" name="message" placeholder="Type your message here">
