--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
             <br>
             <input class="btn btn-outline-success" type="submit" value="Join Chat">
           </div>
+
+          <div class="form-group">
+              <label>Chat Room Name</label>
+              <input class="form-control" type="text" name="room" placeholer="Enter a chatroom here">
+          </div>
         </form>
 
 
